--- a/src/main/java/com/automationShopping/configFile/configuration.properties
+++ b/src/main/java/com/automationShopping/configFile/configuration.properties
@@ -2,4 +2,6 @@ browser=chrome
 URL=http://automationpractice.com/index.php?controller=authentication&back=my-account
 email=kaur00@gmail.com
 password=Kam123
-itemDeletedMsg=Your shopping cart is empty
+itemDeletedMsg=Your shopping cart is empty.
+currentPassword=Kam123
+wishListMsg=Added to your wishlist.
