Added More Test

--- a/src/main/java/com/automationShopping/configFile/configuration.properties
+++ b/src/main/java/com/automationShopping/configFile/configuration.properties
@@ -4,4 +4,6 @@ email=kaur00@gmail.com
 password=Kam123
 itemDeletedMsg=Your shopping cart is empty.
 currentPassword=Kam123
-wishListMsg=Added to your wishlist.
+authenticationErrorMsg=There is 1 error
+invalidemail=kkaur
+password=Kam123
