--- a/src/main/java/com/automationShopping/configFile/configuration.properties
+++ b/src/main/java/com/automationShopping/configFile/configuration.properties
@@ -5,5 +5,6 @@ password=Kam123
 itemDeletedMsg=Your shopping cart is empty.
 currentPassword=Kam123
 authenticationErrorMsg=There is 1 error
+successmsg=Welcome to your account. Here you can manage all of your personal information and orders.
 invalidemail=kkaur
 password=Kam123
